--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,9 @@
 
+header {
+	margin-left: 200px
+}
 h1 {
-	text-align: center;
+	text-align: center; 
 	border-style: groove;
 }
 h2 {
@@ -42,13 +45,18 @@ blockquote, q {
 	quotes: none;
 }
 img {
+    margin-left: 100px;
 	border-style: inset;
 	width: 100%;
 	max-width: 100%;
 }
 figcaption {
-	align-content:center;
+	align-content:flex-end;
 }
 section {
-	margin: 1.875em 0;
+	margin: 2em 0;
 }
+.maps {
+    border: 1px black;
+    padding: 25px 50px 75px;
+  }
